@@ -316,6 +316,9 @@
     <Compile Include="..\SimpleInjector.NET\Internals\ContainerUncontrolledCollectionResolver.cs">
       <Link>Internals\ContainerUncontrolledCollectionResolver.cs</Link>
     </Compile>
+    <Compile Include="..\SimpleInjector.NET\Internals\CyclicDependencyException.cs">
+      <Link>Internals\CyclicDependencyException.cs</Link>
+    </Compile>
     <Compile Include="..\SimpleInjector.NET\Internals\CyclicDependencyValidator.cs">
       <Link>Internals\CyclicDependencyValidator.cs</Link>
     </Compile>
